--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -25,7 +25,7 @@
 					<div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
 						<a class="dropdown-item" role="button" href="/course/<%= course.id %>">Anzeigen</a>
 						<a class="dropdown-item" href="/course/edit/<%= course.id %>">Bearbeiten</a>
-						<a class="dropdown-item" href="/course/students/<%= course.title %>">Teilnehmer</a>
+						<a class="dropdown-item" href="/course/students/<%= course.title %>/<%= course.id %>">Teilnehmer</a>
 					</div>
 				  </div>
 				</div>
