--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
 		<% courses.forEach(function(course){ %>
 		<div class="col-sm-6">
 			<div class="card">
-			  <p class="card-header">Enrolled</p>
+			  <p class="card-header">Enrolled in Course</p>
 			  <div class="card-body">
 				<h5 class="card-title"><%= course.course_title %></h5>
 				<a href="/course/<%= course.course_id %>" class="btn btn-warning">Anzeigen</a>
