--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" id="exampleInputPassword1" name="password">
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Login</button>
 </form>
 <a href="/register">Noch nicht registriert? Hier klicken</a>
 
