--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" id="exampleInputPassword1" name="password">
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Register</button>
 </form>
 <a href="/login">Du hast schon einen Account? Logge dich hier ein</a>
 
