--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,3 +27,13 @@ footer {
 .editor-toolbar.fullscreen {
 	z-index: 2000;
 }
+
+.bg-green {
+	background-color: rgb(0, 204, 102, 0.3);
+}
+
+@media (max-width: 768px){
+	.card {
+		margin-top: 1em;
+	}
+}
