--- a/views/create_course.ejs
+++ b/views/create_course.ejs
@@ -28,7 +28,7 @@
 	  </tbody>
   </table>
 </div>
-<button id="send" class="btn btn-primary">Senden</button>
+<button id="send" class="btn btn-primary">Save</button>
 
 <script>
 
