--- a/views/lesson.ejs
+++ b/views/lesson.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-<h1>Lesson: <%= title %></h1>
+<h1 class="font-weight-bold mb-4 border-bottom"><%= title %></h1>
 <div><%- content %></div>
 
 <% include ./partials/footer %>
