--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,7 @@
 </main>  
 <!-- Footer -->
   <footer class="py-2 bg-dark">
+    <a href="/help" class="icon"><b>?</b></a>
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; START.CODE 2019</p>
     </div>
