--- a/views/trainer.ejs
+++ b/views/trainer.ejs
@@ -3,9 +3,11 @@
 <h1>Trainer</h1>
 
 <ul class="list-group">
-  <a href="/courses"><li class="list-group-item">Kursübersicht</li></a>
-  <a href="/create-lesson"><li class="list-group-item">Lesson erstellen</li></a>
-  <a href="/create-course"><li class="list-group-item">Kurs erstellen</li></a>
+  <a href="/courses"><li class="list-group-item">Course Overview</li></a>
+  <a href="/lessons"><li class="list-group-item">All Lessons</li></a>
+  <a href="/create-lesson"><li class="list-group-item">Create Lesson</li></a>
+  <a href="/create-course"><li class="list-group-item">Create Course</li></a>
 </ul>
+<a href="/lesson/5"><button class="btn btn-sm btn-info mt-2">Questions?</button></a>
 
 <% include ./partials/footer %>
