--- a/views/create_lesson.ejs
+++ b/views/create_lesson.ejs
@@ -10,10 +10,10 @@
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group" class="editor">
-    <label for="exampleFormControlTextarea1">Course Content</label>
+    <label for="exampleFormControlTextarea1">Lesson Content</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" name="content"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary">Senden</button>
+  <button type="submit" class="btn btn-primary">Save</button>
 </form>
 
 <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
