--- a/views/edit_course.ejs
+++ b/views/edit_course.ejs
@@ -32,7 +32,7 @@
 	  </tbody>
   </table>
 </div>
-<button id="send" class="btn btn-primary">Kurs ändern</button>
+<button id="send" class="btn btn-primary">Save</button>
 
 <script>
 var initial_title = "<%= title %>"
