feat: image uploads to cloudinary in lesson

--- a/views/create_course.ejs
+++ b/views/create_course.ejs
@@ -4,7 +4,7 @@
 <p>Einen Kurs erstellst du mit einem Namen und einer Auswahl an Lessons</p>
 <div class="form-group">
 	<label for="exampleInputEmail1">Kurstitel</label>
-	<input type="text" class="form-control" id="title" aria-describedby="emailHelp" name="title">
+	<input type="text" class="form-control" id="title" aria-describedby="emailHelp" name="title" required>
 </div>
 <div class="table-responsive-sm">
   <table class="table">
