--- a/views/help.ejs
+++ b/views/help.ejs
@@ -1,9 +1,12 @@
 <% include ./partials/header %>
 
-<h1>Hilfe</h1>
+<h1>Help</h1>
 
-<div class="container">
-
+<div>
+    <h3>Accounts</h3>
+    <p>There is not a way to register to the App by yourself. It is only possible to receive an invitation to your email. If you've paid your course tution, you should've received an invitation to the platform including credentials. If you didn't, please contact start-code@startplatz.de</p>
+    <h3>Trainer</h3>
+    <p>If you are a Trainer and cannot access the instructor version, please contact start-code@startplatz.de</p class="p-0">
 </div>
 
 <% include ./partials/footer %>
