--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header %>
 
 <h1>Dashboard</h1>
-<p>Welcome back, <%= username %></p>
+<p>Logged in: <%= username %></p>
 <div class="container">
 	<div class="row">
 		<% courses.forEach(function(course){ %>
