--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -1,12 +1,12 @@
 <% include ./partials/header %>
 
-<h1>Alle Kurse</h1>
+<h1>All Courses</h1>
 
 <div class="table-responsive-sm my-5">
   <table class="table">
 	  <thead>
 		<tr>
-		  <th scope="col">Kurse</th>
+		  <th scope="col">Courses</th>
 		  <th scope="col" class="text-right"></th>
 		</tr>
 	  </thead>
@@ -20,12 +20,12 @@
 				<div class="btn-group" role="group">
 				  <div class="btn-group" role="group">
 					<button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					  Aktionen
+					  Actions
 					</button>
 					<div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-						<a class="dropdown-item" role="button" href="/course/<%= course.id %>">Anzeigen</a>
-						<a class="dropdown-item" href="/course/edit/<%= course.id %>">Bearbeiten</a>
-						<a class="dropdown-item" href="/course/students/<%= course.title %>/<%= course.id %>">Teilnehmer</a>
+						<a class="dropdown-item" role="button" href="/course/<%= course.id %>">Show</a>
+						<a class="dropdown-item" href="/course/edit/<%= course.id %>">Edit</a>
+						<a class="dropdown-item" href="/course/students/<%= course.title %>/<%= course.id %>">Students</a>
 					</div>
 				  </div>
 				</div>
