--- a/views/create_lesson.ejs
+++ b/views/create_lesson.ejs
@@ -1,12 +1,22 @@
 <% include ./partials/header %>
 
-<h1>Lesson erstellen</h1>
+<h1>Create Lesson</h1>
 <p>Eine Lesson erstellst du mit einem Namen und Markdown</p>
+
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <h4 class="alert-heading">Well done!</h4>
+  <hr>
+  <p>You uploaded the image. Copy the URL to include it in the markdown: </p>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
 
 <form method="post" action="/create-lesson">
   <div class="form-group">
     <label for="exampleInputEmail1">Lesson Title</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="title">
+    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="title" required>
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group" class="editor">
@@ -14,9 +24,30 @@
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" name="content"></textarea>
   </div>
   <button type="submit" class="btn btn-primary">Save</button>
+  <button type="button" id="upload_widget" class="btn btn-success">Upload Images</button>
 </form>
 
 <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 <script>var simplemde = new SimpleMDE();</script>
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript">  
+</script>
+<script type="text/javascript">   
+
+  $('.alert').hide()
+  var myWidget = cloudinary.createUploadWidget({
+    cloudName: 'mixbened', 
+    uploadPreset: 'yh6kgezn'}, (error, result) => { 
+      if (!error && result && result.event === "success") { 
+        console.log('Done! Here is the image url: ', result.info.url); 
+        $( ".alert > p" ).append("<b>" + result.info.url + "</b>")
+        $('.alert').show()
+      }
+    }
+  )
+  
+  document.getElementById("upload_widget").addEventListener("click", function(){
+      myWidget.open();
+    }, false);
+  </script>
 
 <% include ./partials/footer %>
