--- a/views/create_course.ejs
+++ b/views/create_course.ejs
@@ -1,5 +1,6 @@
 <% include ./partials/header %>
 
+<button class="btn btn-sm btn-outline-info my-2" onclick="window.history.back()">Go Back</button>
 <h1>Kurs Erstellen</h1>
 <p>Einen Kurs erstellst du mit einem Namen und einer Auswahl an Lessons</p>
 <div class="form-group">
