--- a/views/lesson.ejs
+++ b/views/lesson.ejs
@@ -1,5 +1,6 @@
 <% include ./partials/header %>
 
+<button class="btn btn-sm btn-outline-info my-2" onclick="window.history.back()">Go Back</button>
 <h1 class="font-weight-bold mb-4 border-bottom"><%= title %></h1>
 <div><%- content %></div>
 
