--- a/views/trainer.ejs
+++ b/views/trainer.ejs
@@ -3,10 +3,10 @@
 <h1>Trainer</h1>
 
 <ul class="list-group">
-  <a href="/courses"><li class="list-group-item">Course Overview</li></a>
-  <a href="/lessons"><li class="list-group-item">All Lessons</li></a>
-  <a href="/create-lesson"><li class="list-group-item">Create Lesson</li></a>
-  <a href="/create-course"><li class="list-group-item">Create Course</li></a>
+  <a href="/courses" class="text-dark my-1"><li class="list-group-item list-group-item-action">Course Overview</li></a>
+  <a href="/lessons" class="text-dark my-1"><li class="list-group-item list-group-item-action">All Lessons</li></a>
+  <a href="/create-lesson" class="text-dark my-1"><li class="list-group-item list-group-item-action">Create Lesson</li></a>
+  <a href="/create-course" class="text-dark my-1"><li class="list-group-item list-group-item-action">Create Course</li></a>
 </ul>
 <a href="/lesson/5"><button class="btn btn-sm btn-info mt-2">Questions?</button></a>
 
