--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -1,5 +1,6 @@
 <% include ./partials/header %>
 
+<button class="btn btn-sm btn-outline-info my-2" onclick="window.history.back()">Go Back</button>
 <h1>All Courses</h1>
 
 <div class="table-responsive-sm my-5">
