--- a/views/create_lesson.ejs
+++ b/views/create_lesson.ejs
@@ -1,5 +1,6 @@
 <% include ./partials/header %>
 
+<button class="btn btn-sm btn-outline-info my-2" onclick="window.history.back()">Go Back</button>
 <h1>Create Lesson</h1>
 <p>Eine Lesson erstellst du mit einem Namen und Markdown</p>
 
