--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,6 @@
   </div>
   <button type="submit" class="btn btn-primary">Login</button>
 </form>
-<a href="/register">Noch nicht registriert? Hier klicken</a>
+<!-- <a href="/register">Noch nicht registriert? Hier klicken</a> -->
 
 <% include ./partials/footer %>
