feat: start code info

--- a/views/course.ejs
+++ b/views/course.ejs
@@ -44,6 +44,9 @@
   		<% }); %>
 	  </tbody>
   </table>
+  <div class="alert alert-primary" role="alert">
+	START.CODE Info: Schön dass du da bist! Hier ist noch nicht viel zu finden. Die Lessons werden nach und nach hier reingeladen...
+  </div>
 </div>
 
 <script>
