--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
   <!-- Custom styles for this template -->
   <link href="/stylesheets/style.css" type="text/css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <script src="/vendor/jquery/jquery.min.js"></script>
 </head>
 
