redirect to https

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
   <link href="/stylesheets/style.css" type="text/css" rel="stylesheet">
   <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <script src="/vendor/jquery/jquery.min.js"></script>
-  <link href="/vendor/fontawesome/css/all.css" rel="stylesheet">
+  <script src="https://use.fontawesome.com/c80da612f9.js"></script>
 </head>
 
 <body id="page-top">
