feat: small images

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,6 +60,10 @@ main.container {
 	margin-bottom: 5%;
 }
 
+img {
+	max-width: 100%;
+}
+
 @media (max-width: 768px){
 	.card {
 		margin-top: 1em;
