--- a/views/course.ejs
+++ b/views/course.ejs
@@ -7,8 +7,7 @@
   <table class="table">
 	  <thead>
 		<tr>
-		  <th scope="col">Number</th>
-		  <th scope="col">Lessons</th>
+		  <th scope="col">Modul</th>
 		  <th class="text-right" scope="col">Aktion</th>
 		</tr>
 	  </thead>
@@ -16,9 +15,6 @@
 		<% lessons.forEach(function(lesson, index){ %>
 			<% if(lesson.check) { %>
 				<tr class="bg-green">
-					<td scope="row">
-						<%= index+1 %>
-					</td>
 					<td scope="row">
 						<%= lesson.lesson_title %>
 					</td>
@@ -29,9 +25,6 @@
 				</tr>
 			<% } else { %>
 				<tr>
-					<td scope="row">
-						<%= index %>
-					</td>
 					<td scope="row">
 						<%= lesson.lesson_title %>
 					</td>
