feat: ready for training

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,7 +34,7 @@
             <a class="nav-link js-scroll-trigger" href="/">Dashboard</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/trainer">Trainer</a>
+            <a class="nav-link js-scroll-trigger" href="/trainer">Trainerbereich</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="/logout"><% if (logged) { %>Logout<% } %></a>
