--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top border-bottom" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="/"><img width="120" src="/media/logo.png" alt="START.CODE Logo"></a>
+      <a class="navbar-brand js-scroll-trigger" href="/"><img width="120" src="/media/logo.png" alt="START.CODE Logo" id="logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
